--- a/src/main/resources/templates/list-concert.html
+++ b/src/main/resources/templates/list-concert.html
@@ -8,6 +8,17 @@
 <body>
     <h1>Concert List</h1>
     <!-- TODO: Add list of concerts -->
+    <a href="/add-concert/">Add Concert</a>
+    <a href="/delete-concert/">Delete Concert</a>
+    <ul>
     <!-- TODO: show delete link for each concert -->
+    <li th:each="concert : ${concerts}">
+        <a  th:href="@{/delete-concert/{id}(id=${concert.id})}">Delete</a>
+        <span th:text="${concert.title}"></span> 
+        <span th:text="${concert.performer}"></span>
+        <span th:text="${concert.date}"></span>
+        <span th:text="${concert.description}"></span>
+    </li>
+</ul>
 </body>
 </html>
